[gd_scene load_steps=4 format=3 uid="uid://cyjnpnf03bar7"]

[ext_resource type="Script" uid="uid://bye3q8bixmkbc" path="res://Scripts/UI/Data Panel/property_item.gd" id="1_fk3j5"]
[ext_resource type="Theme" uid="uid://cixie5v1vsdec" path="res://Data/main-theme.tres" id="1_fvka8"]
[ext_resource type="Script" uid="uid://4icp457ui0b1" path="res://Scripts/UI/Data Panel/property_input.gd" id="3_17t3b"]

[node name="Property" type="HBoxContainer" node_paths=PackedStringArray("property_name_label", "property_value_control_dict")]
custom_minimum_size = Vector2(210, 0)
offset_right = 192.0
offset_bottom = 31.0
script = ExtResource("1_fk3j5")
property_name_label = NodePath("Name Label")
property_value_control_dict = {
0: NodePath("Number"),
1: NodePath("Vector2"),
2: NodePath("Boolean"),
3: NodePath("String")
}

[node name="Name Label" type="Label" parent="."]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.8
theme = ExtResource("1_fvka8")
theme_override_font_sizes/font_size = 9
text = "Position"
clip_text = true

[node name="Number" type="HBoxContainer" parent="." node_paths=PackedStringArray("value_field")]
visible = false
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("3_17t3b")
value_field = [NodePath("num")]

[node name="num" type="SpinBox" parent="Number"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_fvka8")
min_value = -1e+07
max_value = 1e+07
step = 0.01
allow_greater = true
allow_lesser = true
select_all_on_focus = true

[node name="String" type="HBoxContainer" parent="." node_paths=PackedStringArray("value_field")]
visible = false
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
script = ExtResource("3_17t3b")
type = 3
value_field = [NodePath("str")]

[node name="str" type="LineEdit" parent="String"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_fvka8")
text = "Text"
alignment = 3
emoji_menu_enabled = false
select_all_on_focus = true

[node name="Boolean" type="HBoxContainer" parent="." node_paths=PackedStringArray("value_field")]
visible = false
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
script = ExtResource("3_17t3b")
type = 2
value_field = [NodePath("CheckBox")]

[node name="CheckBox" type="CheckBox" parent="Boolean"]
layout_mode = 2

[node name="Vector2" type="HBoxContainer" parent="." node_paths=PackedStringArray("value_field")]
visible = false
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_stretch_ratio = 1.3
script = ExtResource("3_17t3b")
type = 1
value_field = [NodePath("x"), NodePath("y")]

[node name="x" type="SpinBox" parent="Vector2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_fvka8")
min_value = -1e+07
max_value = 1e+07
step = 0.01
allow_greater = true
allow_lesser = true
select_all_on_focus = true

[node name="y" type="SpinBox" parent="Vector2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_fvka8")
min_value = -1e+07
max_value = 1e+07
step = 0.01
allow_greater = true
allow_lesser = true
select_all_on_focus = true

[connection signal="value_changed" from="Number/num" to="Number" method="_on_value_changed"]
[connection signal="text_changed" from="String/str" to="String" method="_on_text_changed"]
[connection signal="toggled" from="Boolean/CheckBox" to="Boolean" method="_on_toggled"]
[connection signal="value_changed" from="Vector2/x" to="Vector2" method="_on_value_changed"]
[connection signal="value_changed" from="Vector2/y" to="Vector2" method="_on_value_changed"]
